Arnwald-Druidenhain: remove from Arnwald-KleineHoehle

--- a/mod/area/area026.git.yml
+++ b/mod/area/area026.git.yml
@@ -2555,7 +2555,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.981742024421692}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.981741905212402}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2975,7 +2975,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.490871131420135}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.490871042013168}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -3325,7 +3325,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.01885652542114}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.01885604858398}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -4235,7 +4235,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.82250595092773}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.82250547409058}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -4935,7 +4935,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.93894112110138}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.9389408826828}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5367,7 +5367,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.77341985702515}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.77341938018799}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5511,7 +5511,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.0245435461401939}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.0245435424149036}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -6447,7 +6447,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 81}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122717820107937}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122717812657356}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -12451,7 +12451,7 @@ hash: !ruby/object:NWN::Gff::Struct
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 0}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: WP_TW13_OL}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ""}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -1.70787152455887e-05}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -1.75555524037918e-05}
           XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 20.048885345459}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -1.0}
           YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 118.140502929688}
@@ -12486,7 +12486,7 @@ hash: !ruby/object:NWN::Gff::Struct
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 0}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: WP_TW13_OR}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ""}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.0245583709329367}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.0245588477700949}
           XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 99.7911605834961}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -0.999698400497437}
           YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 118.180152893066}
@@ -12836,10 +12836,45 @@ hash: !ruby/object:NWN::Gff::Struct
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 0}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: WP_TW13_OM}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ""}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 7.30355304767727e-06}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 7.78039066062775e-06}
           XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 59.7599983215332}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -1.0}
           YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 118.089996337891}
           ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.00999999977648258}
+        struct_id: 5
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :byte, value: 1}
+          Description: !ruby/object:NWN::Gff::Element 
+            label: Description
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: {}
+
+          HasMapNote: !ruby/object:NWN::Gff::Element {label: HasMapNote, type: :byte, value: 0}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: ""}
+          LocalizedName: !ruby/object:NWN::Gff::Element 
+            label: LocalizedName
+            str_ref: 14817
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: {}
+
+          MapNote: !ruby/object:NWN::Gff::Element 
+            label: MapNote
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: {}
+
+          MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: Ausgang_Druidenhain}
+          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_waypoint001}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.831469535827637}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 31.0472412109375}
+          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.555570363998413}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 54.6994667053223}
+          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: -5.7220458984375e-06}
         struct_id: 5
   struct_id: 4294967295
