--- a/mod/area/arnwaldkleinehhl.git.yml
+++ b/mod/area/arnwaldkleinehhl.git.yml
@@ -185,7 +185,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1086}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122718036174774}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122718021273613}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1048,7 +1048,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 335}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.466330200433731}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.466330170631409}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1120,7 +1120,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 335}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.96348905563354}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.96348834037781}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1907,7 +1907,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.06827759742737}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.06827664375305}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1977,7 +1977,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.06795001029968}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.06794905662537}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2047,7 +2047,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.945232629776}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.94523167610168}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2187,7 +2187,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.79797101020813}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.79797005653381}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2257,7 +2257,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.82218670845032}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.82218599319458}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2397,7 +2397,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.98803198337555}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.98803150653839}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2467,7 +2467,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 340}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.99431920051575}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.99431824684143}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2545,115 +2545,11 @@ hash: !ruby/object:NWN::Gff::Struct
     TriggerList: !ruby/object:NWN::Gff::Element 
       label: TriggerList
       type: :list
-      value: 
-      - !ruby/object:NWN::Gff::Struct 
-        hash: 
-          AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Cursor: !ruby/object:NWN::Gff::Element {label: Cursor, type: :byte, value: 0}
-          DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 0}
-          Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
-          Geometry: !ruby/object:NWN::Gff::Element 
-            label: Geometry
-            type: :list
-            value: 
-            - !ruby/object:NWN::Gff::Struct 
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -3.54934787750244}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: -0.118918418884277}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 0.275000005960464}
-              struct_id: 3
-            - !ruby/object:NWN::Gff::Struct 
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: 0.0}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 0.0}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 0.275000065565109}
-              struct_id: 3
-            - !ruby/object:NWN::Gff::Struct 
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -0.0988445281982422}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 1.02852272987366}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 0.275000005960464}
-              struct_id: 3
-            - !ruby/object:NWN::Gff::Struct 
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -3.54432106018066}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 0.80987024307251}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 0.182711869478226}
-              struct_id: 3
-          HighlightHeight: !ruby/object:NWN::Gff::Element {label: HighlightHeight, type: :float, value: 0.0}
-          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: ""}
-          LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 0}
-          LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
-          LocalizedName: !ruby/object:NWN::Gff::Element 
-            label: LocalizedName
-            str_ref: 14759
-            type: :cexolocstr
-            value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                4: tr_EnterDruideGrove
-                5: tr_EnterDruideGrove
-          OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
-          OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnTrapTriggered: !ruby/object:NWN::Gff::Element {label: OnTrapTriggered, type: :resref, value: ""}
-          PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
-          ScriptHeartbeat: !ruby/object:NWN::Gff::Element {label: ScriptHeartbeat, type: :resref, value: ""}
-          ScriptOnEnter: !ruby/object:NWN::Gff::Element {label: ScriptOnEnter, type: :resref, value: us_entergrove_1}
-          ScriptOnExit: !ruby/object:NWN::Gff::Element {label: ScriptOnExit, type: :resref, value: ""}
-          ScriptUserDefine: !ruby/object:NWN::Gff::Element {label: ScriptUserDefine, type: :resref, value: ""}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: tr_EnterDruideGrove}
-          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: newgeneric}
-          TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
-          TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
-          TrapDisarmable: !ruby/object:NWN::Gff::Element {label: TrapDisarmable, type: :byte, value: 1}
-          TrapFlag: !ruby/object:NWN::Gff::Element {label: TrapFlag, type: :byte, value: 0}
-          TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
-          TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
-          Type: !ruby/object:NWN::Gff::Element {label: Type, type: :int, value: 0}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.0}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 18.6915531158447}
-          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.0}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 2.97379374504089}
-          ZOrientation: !ruby/object:NWN::Gff::Element {label: ZOrientation, type: :float, value: 0.0}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.0}
-        struct_id: 1
+      value: []
+
     WaypointList: !ruby/object:NWN::Gff::Element 
       label: WaypointList
       type: :list
-      value: 
-      - !ruby/object:NWN::Gff::Struct 
-        hash: 
-          Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :byte, value: 1}
-          Description: !ruby/object:NWN::Gff::Element 
-            label: Description
-            str_ref: 4294967295
-            type: :cexolocstr
-            value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: {}
+      value: []
 
-          HasMapNote: !ruby/object:NWN::Gff::Element {label: HasMapNote, type: :byte, value: 0}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: ""}
-          LocalizedName: !ruby/object:NWN::Gff::Element 
-            label: LocalizedName
-            str_ref: 14817
-            type: :cexolocstr
-            value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: {}
-
-          MapNote: !ruby/object:NWN::Gff::Element 
-            label: MapNote
-            str_ref: 4294967295
-            type: :cexolocstr
-            value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: {}
-
-          MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: Ausgang_Druidenhain}
-          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_waypoint001}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.0}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 19.4481029510498}
-          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 1.0}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 4.82374238967896}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.10601806640625}
-        struct_id: 5
   struct_id: 4294967295
