--- a/mod/area/arnw_druidenhain.git.yml
+++ b/mod/area/arnw_druidenhain.git.yml
@@ -360,7 +360,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 1}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 54}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.14158034324646}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1415798664093}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
           CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 80}
@@ -444,15 +444,15 @@ hash: !ruby/object:NWN::Gff::Struct
               struct_id: 0
             - !ruby/object:NWN::Gff::Struct 
               hash: 
-                Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :int, value: 35}
-                CR: !ruby/object:NWN::Gff::Element {label: CR, type: :float, value: 0.5}
+                Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :int, value: 859}
+                CR: !ruby/object:NWN::Gff::Element {label: CR, type: :float, value: 0.25}
                 ResRef: !ruby/object:NWN::Gff::Element {label: ResRef, type: :resref, value: reh001}
                 SingleSpawn: !ruby/object:NWN::Gff::Element {label: SingleSpawn, type: :byte, value: 0}
               struct_id: 0
             - !ruby/object:NWN::Gff::Struct 
               hash: 
-                Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :int, value: 35}
-                CR: !ruby/object:NWN::Gff::Element {label: CR, type: :float, value: 0.5}
+                Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :int, value: 858}
+                CR: !ruby/object:NWN::Gff::Element {label: CR, type: :float, value: 0.333333343267441}
                 ResRef: !ruby/object:NWN::Gff::Element {label: ResRef, type: :resref, value: reh}
                 SingleSpawn: !ruby/object:NWN::Gff::Element {label: SingleSpawn, type: :byte, value: 0}
               struct_id: 0
@@ -839,7 +839,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1217}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.613591909408569}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.613591849803925}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -981,7 +981,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1208}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.5770800113678}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.57707977294922}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1263,7 +1263,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 178}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122718170285225}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.122718155384064}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1333,7 +1333,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 157}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.22718477249146}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.22718465328217}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -1475,7 +1475,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 157}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.0981745347380638}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.098174512386322}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2185,7 +2185,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1254}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.79797458648682}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 2.79797434806824}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2256,7 +2256,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1140}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.86531686782837}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.86531662940979}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2469,7 +2469,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 82}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.84077310562134}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.84077298641205}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -2611,7 +2611,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1141}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.613591909408569}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.613591849803925}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -3889,7 +3889,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1001}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.65071272850037}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.65071249008179}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -3960,7 +3960,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1001}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.908114850521088}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.908114790916443}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -4102,7 +4102,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1001}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.99432325363159}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.99432277679443}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -4173,7 +4173,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1001}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.89614915847778}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.8961489200592}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -4883,7 +4883,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1003}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.81622970104218}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.81622958183289}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5025,7 +5025,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 1269}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.09249830245972}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.09249782562256}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5309,7 +5309,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 339}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.35619449615479}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -2.35619425773621}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5395,7 +5395,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 8}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.37444663047791}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.37444639205933}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -5466,7 +5466,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 10}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.392699033021927}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -0.392698973417282}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -6551,10 +6551,10 @@ hash: !ruby/object:NWN::Gff::Struct
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: EingangHain}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_waypoint001}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.0245411656796932}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.0245411638170481}
           XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 45.2458076477051}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.99969881772995}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 7.72417593002319}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 7.72417545318604}
           ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: -5.7220458984375e-06}
         struct_id: 5
       - !ruby/object:NWN::Gff::Struct 
